[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pivotmap"
version = "0.1.0"
description = "Attack Path Intelligence Engine"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "PivotMap Contributors"}
]
keywords = ["security", "pentesting", "attack-path", "vulnerability", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "sqlmodel>=0.0.14",
    "networkx>=3.2.0",
    "httpx>=0.26.0",
    "weasyprint>=60.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "python-dateutil>=2.8.2",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
redis = [
    "redis>=5.0.0",
    "rq>=1.15.0",
]
viz = [
    "pyvis>=0.3.2",
    "matplotlib>=3.8.0",
]

[project.scripts]
pivotmap = "pivotmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pivotmap"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
